[build-system]
requires = ["setuptools>=75.6.0", "setuptools_scm[toml]>=5.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'ape-etherscan'
description = 'ape-etherscan: Etherscan Explorer Plugin for Ethereum-based networks'
readme = "README.md"
license = {text = 'Apache-2.0'}
authors = [
    {name = "ApeWorX Ltd.", email = "admin@apeworx.io"}
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
requires-python = ">=3.10"
dependencies = [
    'eth-ape>=0.8.21,<0.9',
    'ethpm_types',
    'requests',
    'yarl',
]
dynamic = ["version"]

[project.urls]
Homepage = 'https://github.com/ApeWorX/ape-etherscan'
Documentation = 'https://github.com/ApeWorX/ape-etherscan/blob/main/README.md'
Source = 'https://github.com/ApeWorX/ape-etherscan'
Tracker = 'https://github.com/ApeWorX/ape-etherscan/issues'

[dependency-groups]
test = [
    'ape-arbitrum',
    'ape-base',
    'ape-blast',
    'ape-bsc',
    'ape-fantom',
    'ape-optimism',
    'ape-polygon',
    'ape-polygon-zkevm',
    'ape-scroll',
    'ape-infura',
    'ape-solidity',
    'pytest>=6.0',
    'pytest-xdist',
    'pytest-cov',
    'hypothesis>=6.2.0,<7',
    'pytest-mock',
]
lint = [
    'mypy>=1.13.0,<2',
    'ruff>=0.8.0,<1',
    'types-requests>=2.28.7',
    'types-setuptools',
    'types-PyYAML',
    'mdformat>=0.7.19',
    'mdformat-gfm>=0.3.5',
    'mdformat-frontmatter>=0.4.1',
    'mdformat-pyproject>=0.0.2',
]
docs = [
    'sphinx-ape',
]
release = [
    'setuptools>=75.6.0',
    'setuptools-scm',
    'wheel',
    'twine',
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "release"},
    "commitizen>=2.40,<2.41",
    "prek",
    "pytest-watch",
    "IPython",
    "ipdb",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
ape_etherscan = ['py.typed']

[tool.mypy]
exclude = "build/"
plugins = ["pydantic.mypy"]
[tool.setuptools_scm]
write_to = "ape_etherscan/version.py"

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
[tool.pytest.ini_options]
addopts = """
    --cov-branch
    --cov-report term
    --cov-report html
    --cov-report xml
    --cov=ape_etherscan
"""
python_files = "test_*.py"
testpaths = "tests"
markers = "fuzzing: Run Hypothesis fuzz test suite"
[tool.mdformat]
number = false
wrap = 100
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "T20",
    "PYI",
    "PT",
    "RET",
    "SIM",
    "TC",
    "ARG",
]
ignore = [
    "E501",
    "ARG001",
    "ARG002",
    "ARG005",
    "B017",
    "B904",
    "N812",
    "N815",
    "PT011",
    "PT017",
    "PYI051",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"version.py" = ["T201"]
"exceptions.py" = ["N818"]
"tests/*" = ["T201", "ARG"]

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ['ape_etherscan']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
